# evo_mem_mcp

./: README.md  README_ZH.md  memory_state.json  pyproject.toml  requirements.txt  server.py  test_light_memory.py  test_mcp_tools.py
evo_memory/config/: __init__.py  config.py
evo_memory/memory/: __init__.py  light_memory.py  sleep_manager.py
