[project]
name = "evo-mem-mcp"
version = "0.1.0"
description = "FastMCP server for the Evo-Memory framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server.py"]
